added color determination to chromosomes

--- a/tracks.css
+++ b/tracks.css
@@ -70,7 +70,7 @@
 }
 
 .track1_neg {
-    fill: #FFCC00;
+    /*fill: #FFCC00;*/
     fill-opacity: .7;
     /*stroke-width: 1;
     stroke: #4c602a;*/
